# disruptiq-notes

./: .gitignore  README.md  ToDo.md  deep-fence-architecture.md
db-mapper-agent/: README.md  debug_scan.json  enhanced_test.csv  enhanced_test.json  example_scan.json  final_scan.json  final_test.json  full_scan.json  main.py  natural_language_test.csv  natural_language_test.html  natural_language_test.json  test_scan.json
deep-fence/: README.md
fully-automated-special-agent-sql-injection/: README.md  code_analysis.py  config.py  fuzzing.py  main.py  payload_generator.py  reporting.py  response_analysis.py
mapper-agent/: .gitignore  README.md  config.json  mapper_agent.py
network-mapper-agent/: .gitignore  README.md  custom_ruleset.yaml  main.py  report.json  requirements.txt
obfuscation-checker-agent/: .gitignore  README.md  main.py  output.json  package-lock.json  report.json  requirements.txt  test_output3.json  test_output4.json
openapi-mapper-agent/: .gitignore  README.md  main.py  test-output.yaml  token_count.py
openapi-spec-agent/: .env.example  .gitignore  README.md  output.yaml
raw-one-file-script/: .gitignore  README.md  raw_script.py  raw_script.sh
secret-scanning-agent/: README.md  main.py  output.json  patterns.py
sql-injection-agent-from-openapi-spec/: README.md
sql-mapper-testing/: sqlmap-logs.txt
supply-chain-mapper-agent/repo-to-scan/: Cargo.toml  Gemfile  Pipfile  WebApplication1.csproj  composer.json  go.mod  package-ts.json  package.json  packages.lock.json  pnpm-lock.yaml  pom.xml  pyproject.toml
test-agent/: map.py
(+425 files in other folders)
